Reverting label changes to do it in another way

--- a/src/main/webapp/arrangement/Edit.xhtml
+++ b/src/main/webapp/arrangement/Edit.xhtml
@@ -13,15 +13,15 @@
             <h:form id="ArrangementEditForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{arrangementController.selected != null}">
-                        <p:outputLabel value="Arrangement ID" for="arrangementid" />
+                        <p:outputLabel value="#{bundle.EditArrangementLabel_arrangementid}" for="arrangementid" />
                         <p:inputText id="arrangementid" value="#{arrangementController.selected.arrangementid}" title="#{bundle.EditArrangementTitle_arrangementid}" required="true" requiredMessage="#{bundle.EditArrangementRequiredMessage_arrangementid}"/>
-                        <p:outputLabel value="Arrangement Start Date" for="arrangementstartdate" />
+                        <p:outputLabel value="#{bundle.EditArrangementLabel_arrangementstartdate}" for="arrangementstartdate" />
                         <p:calendar id="arrangementstartdate" pattern="MM/dd/yyyy" value="#{arrangementController.selected.arrangementstartdate}" title="#{bundle.EditArrangementTitle_arrangementstartdate}" required="true" requiredMessage="#{bundle.EditArrangementRequiredMessage_arrangementstartdate}" showOn="button"/>
-                        <p:outputLabel value="Arrangement Start Time" for="arrangementstarttime" />
+                        <p:outputLabel value="#{bundle.EditArrangementLabel_arrangementstarttime}" for="arrangementstarttime" />
                         <p:calendar id="arrangementstarttime" pattern="HH:mm:ss" value="#{arrangementController.selected.arrangementstarttime}" title="#{bundle.EditArrangementTitle_arrangementstarttime}" required="true" requiredMessage="#{bundle.EditArrangementRequiredMessage_arrangementstarttime}" showOn="button"/>
-                        <p:outputLabel value="Arrangement Duration in Minutes" for="arrangementdurationperminute" />
+                        <p:outputLabel value="#{bundle.EditArrangementLabel_arrangementdurationperminute}" for="arrangementdurationperminute" />
                         <p:inputText id="arrangementdurationperminute" value="#{arrangementController.selected.arrangementdurationperminute}" title="#{bundle.EditArrangementTitle_arrangementdurationperminute}" required="true" requiredMessage="#{bundle.EditArrangementRequiredMessage_arrangementdurationperminute}"/>
-                        <p:outputLabel value="Arrangement Type" for="arrangementtype" />
+                        <p:outputLabel value="#{bundle.EditArrangementLabel_arrangementtype}" for="arrangementtype" />
                         <p:selectOneMenu id="arrangementtype" value="#{arrangementController.selected.arrangementtype}" required="true" requiredMessage="#{bundle.EditArrangementRequiredMessage_arrangementtype}">
                             <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
                             <f:selectItems value="#{arrangementtypeController.itemsAvailableSelectOne}"
