--- a/src/main/webapp/equipmentrent/List.xhtml
+++ b/src/main/webapp/equipmentrent/List.xhtml
@@ -29,19 +29,19 @@
 
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="Rent ID"/>
+                            <h:outputText value="#{bundle.ListEquipmentrentTitle_equipmentrentid}"/>
                         </f:facet>
                         <h:outputText value="#{item.equipmentrentid}"/>
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="Rented duration in minutes"/>
+                            <h:outputText value="#{bundle.ListEquipmentrentTitle_durationperminute}"/>
                         </f:facet>
                         <h:outputText value="#{item.durationperminute}"/>
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="Rent start date"/>
+                            <h:outputText value="#{bundle.ListEquipmentrentTitle_startdate}"/>
                         </f:facet>
                         <h:outputText value="#{item.startdate}">
                             <f:convertDateTime pattern="MM/dd/yyyy" />
@@ -49,7 +49,7 @@
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="Rent start time"/>
+                            <h:outputText value="#{bundle.ListEquipmentrentTitle_starttime}"/>
                         </f:facet>
                         <h:outputText value="#{item.starttime}">
                             <f:convertDateTime pattern="HH:mm:ss" />
@@ -57,25 +57,25 @@
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="Rented status"/>
+                            <h:outputText value="#{bundle.ListEquipmentrentTitle_state}"/>
                         </f:facet>
                         <h:outputText value="#{item.state}"/>
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="Total amount of equipment"/>
+                            <h:outputText value="#{bundle.ListEquipmentrentTitle_total}"/>
                         </f:facet>
                         <h:outputText value="#{item.total}"/>
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="Reservation ID"/>
+                            <h:outputText value="#{bundle.ListEquipmentrentTitle_reservationid}"/>
                         </f:facet>
                         <h:outputText value="#{item.reservationid}"/>
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="Material ID"/>
+                            <h:outputText value="#{bundle.ListEquipmentrentTitle_materialid}"/>
                         </f:facet>
                         <h:outputText value="#{item.materialid}"/>
                     </p:column>
