--- a/src/main/webapp/supplier/List.xhtml
+++ b/src/main/webapp/supplier/List.xhtml
@@ -30,37 +30,37 @@
 
                     <p:column sortBy="#{item.supplierid}" filterBy="#{item.supplierid}">
                         <f:facet name="header">
-                            <h:outputText value="Supplier ID"/>
+                            <h:outputText value="#{bundle.ListSupplierTitle_supplierid}"/>
                         </f:facet>
                         <h:outputText value="#{item.supplierid}"/>
                     </p:column>
                     <p:column sortBy="#{item.bedrijfsnaam}" filterBy="#{item.bedrijfsnaam}">
                         <f:facet name="header">
-                            <h:outputText value="Company name"/>
+                            <h:outputText value="#{bundle.ListSupplierTitle_bedrijfsnaam}"/>
                         </f:facet>
                         <h:outputText value="#{item.bedrijfsnaam}"/>
                     </p:column>
                     <p:column sortBy="#{item.contactpersoon}" filterBy="#{item.contactpersoon}">
                         <f:facet name="header">
-                            <h:outputText value="Contact person"/>
+                            <h:outputText value="#{bundle.ListSupplierTitle_contactpersoon}"/>
                         </f:facet>
                         <h:outputText value="#{item.contactpersoon}"/>
                     </p:column>
                     <p:column sortBy="#{item.phone}" filterBy="#{item.phone}">
                         <f:facet name="header">
-                            <h:outputText value="Company phone"/>
+                            <h:outputText value="#{bundle.ListSupplierTitle_phone}"/>
                         </f:facet>
                         <h:outputText value="#{item.phone}"/>
                     </p:column>
                     <p:column sortBy="#{item.address}" filterBy="#{item.address}">
                         <f:facet name="header">
-                            <h:outputText value="Address"/>
+                            <h:outputText value="#{bundle.ListSupplierTitle_address}"/>
                         </f:facet>
                         <h:outputText value="#{item.address}"/>
                     </p:column>
                     <p:column sortBy="#{item.zip}" filterBy="#{item.zip}">
                         <f:facet name="header">
-                            <h:outputText value="ZIP code"/>
+                            <h:outputText value="#{bundle.ListSupplierTitle_zip}"/>
                         </f:facet>
                         <h:outputText value="#{item.zip}"/>
                     </p:column>
