--- a/src/main/webapp/warehouse/List.xhtml
+++ b/src/main/webapp/warehouse/List.xhtml
@@ -29,31 +29,31 @@
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="Warehouse ID"/>
+                                <h:outputText value="#{bundle.ListWarehouseTitle_warehouseid}"/>
                             </f:facet>
                             <h:outputText value="#{item.warehouseid}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="Address"/>
+                                <h:outputText value="#{bundle.ListWarehouseTitle_address}"/>
                             </f:facet>
                             <h:outputText value="#{item.address}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="Phone number"/>
+                                <h:outputText value="#{bundle.ListWarehouseTitle_phone}"/>
                             </f:facet>
                             <h:outputText value="#{item.phone}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="Storage capacity in m^3"/>
+                                <h:outputText value="#{bundle.ListWarehouseTitle_volume}"/>
                             </f:facet>
                             <h:outputText value="#{item.volume}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="ZIP code"/>
+                                <h:outputText value="#{bundle.ListWarehouseTitle_zip}"/>
                             </f:facet>
                             <h:outputText value="#{item.zip}"/>
                         </p:column>
