--- a/src/main/webapp/arrangement/List.xhtml
+++ b/src/main/webapp/arrangement/List.xhtml
@@ -29,13 +29,13 @@
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="Arrangement ID"/>
+                                <h:outputText value="#{bundle.ListArrangementTitle_arrangementid}"/>
                             </f:facet>
                             <h:outputText value="#{item.arrangementid}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="Arrangement Start Date"/>
+                                <h:outputText value="#{bundle.ListArrangementTitle_arrangementstartdate}"/>
                             </f:facet>
                             <h:outputText value="#{item.arrangementstartdate}">
                                 <f:convertDateTime pattern="MM/dd/yyyy" />
@@ -43,7 +43,7 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="Arrangement Start Time"/>
+                                <h:outputText value="#{bundle.ListArrangementTitle_arrangementstarttime}"/>
                             </f:facet>
                             <h:outputText value="#{item.arrangementstarttime}">
                                 <f:convertDateTime pattern="HH:mm:ss" />
@@ -51,13 +51,13 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="Arrangement Duration in Minutes"/>
+                                <h:outputText value="#{bundle.ListArrangementTitle_arrangementdurationperminute}"/>
                             </f:facet>
                             <h:outputText value="#{item.arrangementdurationperminute}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="Arrangement Type"/>
+                                <h:outputText value="#{bundle.ListArrangementTitle_arrangementtype}"/>
                             </f:facet>
                             <h:outputText value="#{item.arrangementtype}"/>
                         </p:column>
