--- a/src/main/webapp/arrangementtype/List.xhtml
+++ b/src/main/webapp/arrangementtype/List.xhtml
@@ -29,19 +29,19 @@
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="Type ID"/>
+                                <h:outputText value="#{bundle.ListArrangementtypeTitle_arrangementtypeid}"/>
                             </f:facet>
                             <h:outputText value="#{item.arrangementtypeid}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="Type"/>
+                                <h:outputText value="#{bundle.ListArrangementtypeTitle_arrangementtype}"/>
                             </f:facet>
                             <h:outputText value="#{item.arrangementtype}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="Arrangement"/>
+                                <h:outputText value="#{bundle.ListArrangementtypeTitle_arrangement}"/>
                             </f:facet>
                             <h:outputText value="#{item.arrangement}"/>
                         </p:column>
