--- a/src/main/webapp/client/List.xhtml
+++ b/src/main/webapp/client/List.xhtml
@@ -30,37 +30,37 @@
 
                     <p:column sortBy="#{item.clientid}" filterBy="#{item.clientid}">
                         <f:facet name="header">
-                            <h:outputText value="Client ID"/>
+                            <h:outputText value="#{bundle.ListClientTitle_clientid}"/>
                         </f:facet>
                         <h:outputText value="#{item.clientid}"/>
                     </p:column>
                     <p:column sortBy="#{item.firstname}" filterBy="#{item.firstname}">
                         <f:facet name="header">
-                            <h:outputText value="First name"/>
+                            <h:outputText value="#{bundle.ListClientTitle_firstname}"/>
                         </f:facet>
                         <h:outputText value="#{item.firstname}"/>
                     </p:column>
                     <p:column sortBy="#{item.lastname}" filterBy="#{item.lastname}">
                         <f:facet name="header">
-                            <h:outputText value="Last name"/>
+                            <h:outputText value="#{bundle.ListClientTitle_lastname}"/>
                         </f:facet>
                         <h:outputText value="#{item.lastname}"/>
                     </p:column>
                     <p:column sortBy="#{item.mobile}" filterBy="#{item.mobile}">
                         <f:facet name="header">
-                            <h:outputText value="Mobile number"/>
+                            <h:outputText value="#{bundle.ListClientTitle_mobile}"/>
                         </f:facet>
                         <h:outputText value="#{item.mobile}"/>
                     </p:column>
                     <p:column sortBy="#{item.address}" filterBy="#{item.address}">
                         <f:facet name="header">
-                            <h:outputText value="Address"/>
+                            <h:outputText value="#{bundle.ListClientTitle_address}"/>
                         </f:facet>
                         <h:outputText value="#{item.address}"/>
                     </p:column>
                     <p:column sortBy="#{item.zip}" filterBy="#{item.zip}">
                         <f:facet name="header">
-                            <h:outputText value="ZIP code"/>
+                            <h:outputText value="#{bundle.ListClientTitle_zip}"/>
                         </f:facet>
                         <h:outputText value="#{item.zip}"/>
                     </p:column>
