--- a/src/main/webapp/monitor/List.xhtml
+++ b/src/main/webapp/monitor/List.xhtml
@@ -29,25 +29,25 @@
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="Monitor ID"/>
+                                <h:outputText value="#{bundle.ListMonitorTitle_monitorid}"/>
                             </f:facet>
                             <h:outputText value="#{item.monitorid}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="Full name"/>
+                                <h:outputText value="#{bundle.ListMonitorTitle_monitorname}"/>
                             </f:facet>
                             <h:outputText value="#{item.monitorname}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="E-mail"/>
+                                <h:outputText value="#{bundle.ListMonitorTitle_monitoremail}"/>
                             </f:facet>
                             <h:outputText value="#{item.monitoremail}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="Phone number"/>
+                                <h:outputText value="#{bundle.ListMonitorTitle_monitorphone}"/>
                             </f:facet>
                             <h:outputText value="#{item.monitorphone}"/>
                         </p:column>
