--- a/src/main/webapp/setup/Create.xhtml
+++ b/src/main/webapp/setup/Create.xhtml
@@ -13,7 +13,7 @@
             <h:form id="SetupCreateForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{setupController.selected != null}">
-                        <p:outputLabel value="Message of the day" for="communication" />
+                        <p:outputLabel value="#{bundle.CreateSetupLabel_communication}" for="communication" />
                         <p:inputText id="communication" value="#{setupController.selected.communication}" title="#{bundle.CreateSetupTitle_communication}" />
                     </p:panelGrid>
                     <p:commandButton actionListener="#{setupController.create}" value="#{bundle.Save}" update="display,:SetupListForm:datalist,:growl" oncomplete="handleSubmit(args,'SetupCreateDialog');"/>
