--- a/src/main/webapp/supplierMaterial/Edit.xhtml
+++ b/src/main/webapp/supplierMaterial/Edit.xhtml
@@ -14,16 +14,16 @@
                 <h:panelGroup id="display">
                     <h:inputHidden id="suppliermaterialid" value="#{supplierMaterialController.selected.suppliermaterialid}"/>   
                     <p:panelGrid columns="2" rendered="#{supplierMaterialController.selected != null}">
-                        <p:outputLabel value="Our experience" for="experiencenote" />
+                        <p:outputLabel value="#{bundle.EditSupplierMaterialLabel_experiencenote}" for="experiencenote" />
                         <p:inputText id="experiencenote" value="#{supplierMaterialController.selected.experiencenote}" title="#{bundle.EditSupplierMaterialTitle_experiencenote}" />
-                        <p:outputLabel value="Supplying company" for="supplier" />
+                        <p:outputLabel value="#{bundle.EditSupplierMaterialLabel_supplier}" for="supplier" />
                         <p:selectOneMenu id="supplier" value="#{supplierMaterialController.selected.supplier}" required="true" requiredMessage="#{bundle.EditSupplierMaterialRequiredMessage_supplier}">
                             <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
                             <f:selectItems value="#{supplierController.itemsAvailableSelectOne}"
                                            var="supplierItem" itemLabel="#{supplierItem.bedrijfsnaam}"
                                            itemValue="#{supplierItem}"/>
                         </p:selectOneMenu>
-                        <p:outputLabel value="Material" for="material" />
+                        <p:outputLabel value="#{bundle.EditSupplierMaterialLabel_material}" for="material" />
                         <p:selectOneMenu id="material" value="#{supplierMaterialController.selected.material}" required="true" requiredMessage="#{bundle.EditSupplierMaterialRequiredMessage_material}">
                             <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
                             <f:selectItems value="#{materialController.itemsAvailableSelectOne}"
