--- a/src/main/webapp/supplierMaterial/List.xhtml
+++ b/src/main/webapp/supplierMaterial/List.xhtml
@@ -30,19 +30,19 @@
 
                     <p:column sortBy="#{item.experiencenote}" filterBy="#{item.experiencenote}" >
                         <f:facet name="header">
-                            <h:outputText value="Our experience"/>
+                            <h:outputText value="#{bundle.ListSupplierMaterialTitle_experiencenote}"/>
                         </f:facet>
                         <h:outputText value="#{item.experiencenote}"/>
                     </p:column>
                     <p:column sortBy="#{item.supplier}" filterBy="#{item.supplier}">
                         <f:facet name="header">
-                            <h:outputText value="Supplying company"/>
+                            <h:outputText value="#{bundle.ListSupplierMaterialTitle_supplier}"/>
                         </f:facet>
                         <h:outputText value="#{item.supplier}"/>
                     </p:column>
                     <p:column sortBy="#{item.material}" filterBy="#{item.material}">
                         <f:facet name="header">
-                            <h:outputText value="Material"/>
+                            <h:outputText value="#{bundle.ListSupplierMaterialTitle_material}"/>
                         </f:facet>
                         <h:outputText value="#{item.material}"/>
                     </p:column>
