--- a/src/main/webapp/monitoring/List.xhtml
+++ b/src/main/webapp/monitoring/List.xhtml
@@ -68,6 +68,25 @@
                             <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{monitoringController.destroy}" update=":growl,datalist" disabled="#{empty monitoringController.selected}"/>
                         </f:facet>
                     </p:dataTable>
+                    <h:commandLink>
+                        <p:graphicImage name="img/excel.png" />
+                        <p:dataExporter type="xls" target="datalist" fileName="#{bundle.ListMonitoringTitle}" pageOnly="true"/>
+                    </h:commandLink>
+
+                    <h:commandLink>
+                        <p:graphicImage name="img/pdf.png" />
+                        <p:dataExporter type="pdf" target="datalist" fileName="#{bundle.ListMonitoringTitle}" pageOnly="true" />
+                    </h:commandLink>
+
+                    <h:commandLink>
+                        <p:graphicImage name="img/csv.png" />
+                        <p:dataExporter type="csv" target="datalist" fileName="#{bundle.ListMonitoringTitle}" pageOnly="true" />
+                    </h:commandLink>
+
+                    <h:commandLink>
+                        <p:graphicImage name="img/xml.png" />
+                        <p:dataExporter type="xml" target="datalist" fileName="#{bundle.ListMonitoringTitle}" pageOnly="true" />
+                    </h:commandLink>
             </h:form>
 
             <ui:include src="Create.xhtml"/>
