--- a/src/main/webapp/arrangementtype/Create.xhtml
+++ b/src/main/webapp/arrangementtype/Create.xhtml
@@ -18,7 +18,7 @@
                         <p:outputLabel value="#{bundle.CreateArrangementtypeLabel_arrangement}" for="arrangement" />
                         <p:selectOneMenu id="arrangement" value="#{arrangementtypeController.selected.arrangement}" >
                             <f:selectItems value="#{arrangementController.itemsAvailableSelectOne}"
-                                           var="arrangementItem"
+                                           var="arrangementItem" itemLabel="#{arrangementItem.arrangementid}"
                                            itemValue="#{arrangementItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
