--- a/src/main/webapp/monitoring/Create.xhtml
+++ b/src/main/webapp/monitoring/Create.xhtml
@@ -28,7 +28,7 @@
                         <p:outputLabel value="#{bundle.CreateMonitoringLabel_arrangement}" for="arrangement" />
                         <p:selectOneMenu id="arrangement" value="#{monitoringController.selected.arrangement}" required="true" requiredMessage="#{bundle.EditMonitoringRequiredMessage_arrangement}">
                             <f:selectItems value="#{arrangementController.itemsAvailableSelectOne}"
-                                           var="arrangementItem"
+                                           var="arrangementItem" itemLabel="#{arrangementItem.arrangementid}"
                                            itemValue="#{arrangementItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
